# project/routes/teams.js
@@ -5,7 +5,7 @@ const players_utils = require("./utils/players_utils");
 const team_utils = require("./utils/team_utils");
 
 // search team by id
-router.get("/SearchTeamByNId/:teamId", async (req, res, next) => {
+router.get("/SearchTeamById/:teamId", async (req, res, next) => {
   let team_details = [];
   try {
     const team_details = await players_utils.getPlayersByTeam(
